--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,23 @@
   color: #61dafb;
 }
 
+.restart-div {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #ffffff;
+  font-size: 40px;
+  cursor: pointer;
+  border-radius: 16px;
+  padding: 8px
+}
+
+.restart-div:hover {
+  background-color: #61dafb;
+  color: #333;
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
