--- a/src/Game.css
+++ b/src/Game.css
@@ -104,6 +104,22 @@
     cursor: pointer;
 }
 
+.control-icon-outer-div {
+    position: absolute;
+    bottom: 50%;
+    left: 0;
+    z-index: 5;
+    background: white;
+    color: black;
+    user-select: none;
+    border: 1px solid white;
+    border-radius: 50%;
+    padding: 10px;
+    width: 10px;
+    height: 10px;
+    cursor: pointer;
+}
+
 .canvas-outer {
     position: absolute;
     bottom: 0;
